First para added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body>
     <h1>This is an example</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint quia natus a quae delectus officia voluptatem
+        accusamus autem cum dolorem nisi mollitia earum dolorum voluptates excepturi consectetur provident, quasi
+        exercitationem!</p>
 
 </body>
 
